h2 fix on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
   text-decoration: underline;
 }
 
+/* NEEDS CODE CLEAN. THIS IS NOT USED ANYMORE
 #fh5co-header {
   position: absolute;
   z-index: 999999;
@@ -259,6 +260,7 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
     padding-left: 0px;
   }
 }
+  */
 
 #fh5co-home {
   background-color: transparent;
@@ -276,6 +278,36 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
     background-attachment: initial;
   }
 }
+@media screen and (max-width: 768px) {
+  #fh5co-home .text-wrap {
+    height: 500px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #fh5co-home .text-inner h1 {
+    font-size: 40px;
+  }
+  #fh5co-home .text-inner h2 {
+    text-align: left;
+    font-size: 20px;
+    line-height: 32px;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.8);
+    margin: 0 0 10px 0;
+  }
+  
+  .logo-section img{
+    max-width: 50px;
+    margin: 10px;
+  }
+  
+  .logo-section {
+    padding: 10px 0;
+    display: none;
+  }
+}
+
 #fh5co-home a {
   color: rgba(255, 165, 0, 0.8) !important;
   text-decoration: none;
@@ -296,11 +328,7 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
 #fh5co-home .text-wrap {
   height: 900px;
 }
-@media screen and (max-width: 768px) {
-  #fh5co-home .text-wrap {
-    height: 500px;
-  }
-}
+
 #fh5co-home .text-wrap {
   display: table;
   width: 100%;
@@ -332,11 +360,7 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
 #fh5co-home .text-inner h1 span {
   color: #ffa500;
 }
-@media screen and (max-width: 768px) {
-  #fh5co-home .text-inner h1 {
-    font-size: 40px;
-  }
-}
+
 #fh5co-home .text-inner h2 {
   text-align: left;
   font-size: 32px;
@@ -345,6 +369,7 @@ h1, h2, h3, h4, h5, h6, .foliotitle {
   color: rgba(255, 255, 255, 0.8);
   margin: 0 0 10px 0;
 }
+
 
 /*About page heading customization */
 
